# VocalBaby

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.monitoring.yml  dvc.yaml  extracting_voc_chunks_metadata.py  install_requirements.py  main.py  params.yaml  pipeline.py  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py
.github/workflows/: main.yml
RawData/: WW04_segment1.eaf  WW04_segment1.txt  WW04_segment2.eaf  WW04_segment2.txt  WW04_segment3.eaf  WW04_segment3.txt  WW15_segment2.eaf  WW15_segment2.txt  WW15_segment3.eaf  WW15_segment3.txt  WW18_segment1.eaf  WW18_segment1.txt  WW18_segment3.eaf  WW18_segment3.txt  WW25_segment1.eaf  WW25_segment1.txt  WW25_segment2.eaf  WW25_segment2.txt  WW25_segment3.eaf  WW25_segment3.txt
Scripts/: lr_finder.py  train.py
artifacts/12_01_2025_17_44_59/data_validation/: validation_report.yaml
artifacts/12_01_2025_17_50_22/data_validation/: validation_report.yaml
configs/: drift.yaml  model.yaml  monitoring.yaml  training.yaml
data/: metadata.csv  test.csv  train.csv
data_schema/: schema.yaml
docs/: VocalBaby_Production_Packaging_MLOps_Spec.md
final_model/: label_encoder.pkl  model_info.yaml  preprocessing.pkl
infra/terraform/: README.md
models/: config.json  model.safetensors
monitoring/grafana/dashboards/: vocalbaby_dashboard.json
monitoring/prometheus/: prometheus.yml
notebook/: 01_EDA.ipynb  02_Exps_base_model_CNN.ipynb  02__feature_and_model_selection_experiments.ipynb  03_EXPs_augmentation_base_model_CNN.ipynb  03_xgboost_imbalance_experiments.ipynb  04_xgboost_feature_fusion_imbalance_experiments.ipynb  05_xgboost_hybrid_optuna_classbalancing.ipynb  06__xgboost_egemaps_smote_optuna_experiment.ipynb
notebooks/: 01_create_data_and_metadata.ipynb  02_data_exploration.ipynb  03_create_spectral_images.ipynb
scripts/: 01_ingest.sh  02_validate.sh  03_transform.sh  04_tune.sh  05_train.sh  06_evaluate.sh  07_aggregate.sh  run_drift.sh  run_inference.sh  run_ingestion.sh  run_training.sh  run_validation.sh  train_test_imgs.py
src/: config.py  fine_tune_wav2vec2_optuna_cv.py  infant_voice_segmentation_pipeline.py  preprocess_audio.py  process_metadata.py  validate_pipeline.py
src/vocalbaby/: __init__.py  cli.py
src/vocalbaby/api/: __init__.py  (+1 more)
tests/: test.py  test_smoke.py  test_train.py  test_utils_preprocess_feature.py
visioninfantnet/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
visioninfantnet/entity/: artifact_entity.py  config_entity.py
visioninfantnet/exception/: exception.py
visioninfantnet/pipeline/: prediction_pipeline.py  training_pipeline.py
vocalbaby/: config.py  feature.py  labels.py  model.py  optuna_pruning.py  optuna_tune.py  pipeline.py  preprocess.py  processed_train_metadata.py  train_optuna.py  utils.py
(+79 files in other folders)
