[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocalbaby"
version = "1.0.0"
description = "VocalBaby - Production ML system for infant cry analysis using XGBoost and eGeMAPS features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arun Prakash Singh", email = "mail.arun1289@gmail.com"},
]
keywords = ["machine-learning", "audio", "infant-cry", "xgboost", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "resampy>=0.4.3",
    "numba>=0.58.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "timm>=0.9.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    "optuna>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "starlette>=0.27.0",
    "opensmile>=2.5.0",
    "panns-inference>=0.1.0",
    "mlflow<2.17.0",
    "dagshub>=0.3.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "dvc>=3.0.0",
    "dvc-s3>=3.0.0",
    "prometheus-client>=0.19.0",
    "evidently>=0.4.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.5.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
vocalbaby-serve = "vocalbaby.cli:serve"
vocalbaby-train = "vocalbaby.cli:train"

[project.urls]
Homepage = "https://github.com/arunps/VocalBaby"
Repository = "https://github.com/arunps/VocalBaby"
Documentation = "https://github.com/arunps/VocalBaby/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/vocalbaby"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
